--- a/QClient/QClient.vcxproj.filters
+++ b/QClient/QClient.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="client.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="throwpkm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="mainwindow.h">
@@ -59,9 +62,15 @@
     <QtMoc Include="client.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="throwpkm.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="mainwindow.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="throwpkm.ui">
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
